--- a/xapp-descriptor/config.json
+++ b/xapp-descriptor/config.json
@@ -38,6 +38,13 @@
             "txMessages": ["TS_ANOMALY_UPDATE"],
             "policies": []
         }
+        "influxDB": {
+            "influxDBAddress": "http://r4-influxdb-influxdb2.ricplt:80",
+            "username": "admin",
+            "password": "7jQCNdujbSKju7cL32IzOOwAx7rEjEGJ",
+            "token": "Eki592tJqjTB47A3KHBpbFpfIoecPVjd",
+            "organization": "my-org",
+            "bucket": "kpimon"
 
 }
 
