--- a/xapp-descriptor/config.json
+++ b/xapp-descriptor/config.json
@@ -40,6 +40,8 @@
         },
         "influxDB": {
             "influxDBAddress": "http://r4-influxdb-influxdb2.ricplt:80",
+            "host": "r4-influxdb-influxdb2.ricplt",
+            "port": "80",
             "username": "admin",
             "password": "7jQCNdujbSKju7cL32IzOOwAx7rEjEGJ",
             "token": "Eki592tJqjTB47A3KHBpbFpfIoecPVjd",
