--- a/src/ad_config.ini
+++ b/src/ad_config.ini
@@ -15,12 +15,12 @@
 # ==================================================================================
 
 [influxdb]
-host = ricplt-influxdb.ricplt 
-port = 8086
+host = r4-influxdb-influxdb2.ricplt 
+port = 80
 user = admin
-password = 
+password = 7jQCNdujbSKju7cL32IzOOwAx7rEjEGJ
 path = 
-database = RIC-Test
+database = kpimon
 measurement = UEReports
 ssl = False 
 
