--- a/src/ad_config.ini
+++ b/src/ad_config.ini
@@ -15,6 +15,7 @@
 # ==================================================================================
 
 [influxdb]
+influxDBAdres = http://r4-influxdb-influxdb2.ricplt:80
 host = r4-influxdb-influxdb2.ricplt 
 port = 80
 user = admin
@@ -23,12 +24,15 @@ path =
 database = kpimon
 measurement = UEReports
 ssl = False 
+token = Eki592tJqjTB47A3KHBpbFpfIoecPVjd
+org = my-org
+bucket = kpimon
 
 [features]
-thpt = DRB.UEThpDl
-rsrp = RF.serving.RSRP
-rsrq = RF.serving.RSRQ
-rssinr  = RF.serving.RSSINR
-prb_usage = RRU.PrbUsedDl
-ue = ue-id
-anomaly = Viavi.UE.anomalies
+thpt = DRB_UEThpDl
+rsrp = Viavi_UE_Rsrp
+rsrq = Viavi_UE_Rsrq
+rssinr  = Viavi_UE_RsSinr
+prb_usage = RRU_PrbUsedDl
+ue = Viavi_UE_id
+anomaly = Viavi_UE_anomalies
