--- a/src/ad_config.ini
+++ b/src/ad_config.ini
@@ -21,8 +21,8 @@ port = 80
 user = admin
 password = 7jQCNdujbSKju7cL32IzOOwAx7rEjEGJ
 path = 
-database = kpimon
-measurement = UEReports
+database = Timeseries
+measurement = UeMetrics
 ssl = False 
 token = Eki592tJqjTB47A3KHBpbFpfIoecPVjd
 org = my-org
